<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    tools:context="org.jorgechato.mybeat.AddControl"
    android:background="@color/grey">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shadow_box_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20dp"
                android:text="dd/mm/YYYY"
                android:id="@+id/adddate"
                android:clickable="true"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textSize="20dp"
                android:text="HH:mm:ss"
                android:layout_alignParentRight="true"
                android:id="@+id/addtime"
                android:clickable="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_below="@+id/adddate"
                android:layout_marginTop="8dp"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/addnote"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/note"
                android:maxLength="150"
                android:layout_below="@+id/spinner"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:padding="8dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shadow_box_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/glucose"
                android:id="@+id/textView"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />


            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/addglucose"
                android:layout_below="@+id/textView"
                android:layout_alignParentStart="true"
                android:layout_marginStart="31dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="mmo/l"
                android:id="@+id/addunit"
                android:layout_alignBottom="@+id/addglucose"
                android:layout_toEndOf="@+id/addglucose" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shadow_box_text">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/insulin"
                android:id="@+id/textView5"
                android:layout_gravity="center_horizontal"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />


            <EditText
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/addinsulin"
                android:layout_below="@+id/textView5"
                android:layout_alignParentStart="true"
                android:layout_marginStart="31dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/unit"
                android:layout_alignBottom="@+id/addinsulin"
                android:layout_toEndOf="@+id/addinsulin" />

        </RelativeLayout>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_control"
            android:background="@drawable/shadow_box_button"
            android:textColor="@android:color/white"
            android:id="@+id/addcontrol"
            android:onClick="onClick"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    </ScrollView>
</RelativeLayout>
