<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:orientation="vertical"
    android:id="@+id/layoutPa"
    tools:context="org.jorgechato.mybeat.ItemHospital">
<com.melnykov.fab.ObservableScrollView
    android:id="@+id/scroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:paddingBottom="0dp"
    android:orientation="vertical"
    android:id="@+id/layoutSon"
    tools:context="org.jorgechato.mybeat.ItemHospital">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        android:id="@+id/imageBackground"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="false" />

    <com.pkmmte.view.CircularImageView
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:id="@+id/imageSmall"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        app:border="true"
        app:border_color="#EEEEEE"
        app:border_width="4dp"
        app:selector_stroke_width="4dp"
        app:shadow="true"
        android:layout_alignParentLeft="false" />
    <!--1-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/imageSmall"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/timetable"
        android:id="@+id/timetable"
        android:layout_alignParentStart="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:id="@+id/separator0"
        android:layout_below="@+id/timetable"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:visibility="visible"
        android:background="@drawable/border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16dp"
        android:text="timetable"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/txttimetable"
        android:layout_below="@+id/separator0"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />
    <!--2-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/txttimetable"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/phone"
        android:id="@+id/phone"
        android:layout_alignParentStart="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:id="@+id/separator1"
        android:layout_below="@+id/phone"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:visibility="visible"
        android:background="@drawable/border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="20dp"
        android:textColor="@color/primary"
        android:text="phone"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/txtphone"
        android:layout_below="@+id/separator1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />
    <!--3-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/txtphone"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/email"
        android:id="@+id/email"
        android:layout_alignParentStart="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:id="@+id/separator2"
        android:layout_below="@+id/email"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:visibility="visible"
        android:background="@drawable/border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16dp"
        android:text="email"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/txtemail"
        android:layout_below="@+id/separator2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />
    <!--3-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/txtemail"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/direction"
        android:id="@+id/direction"
        android:layout_alignParentStart="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:id="@+id/separator3"
        android:layout_below="@+id/direction"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:visibility="visible"
        android:background="@drawable/border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16dp"
        android:text="@string/direction"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/txtdirection"
        android:layout_below="@+id/separator3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />
    <!--4-->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/txtdirection"
        android:layout_marginTop="15dp"
        android:textSize="18dp"
        android:text="@string/description"
        android:id="@+id/description"
        android:layout_alignParentStart="true"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:id="@+id/separator"
        android:layout_below="@+id/description"
        android:layout_marginTop="8dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:visibility="visible"
        android:background="@drawable/border"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="16dp"
        android:text="description"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/txtDescription"
        android:layout_below="@+id/separator"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />


</RelativeLayout>

</com.melnykov.fab.ObservableScrollView>
    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/pin"
        android:onClick="onClick"
        fab:fab_colorNormal="@color/accent"
        fab:fab_colorPressed="@color/accent"
        fab:fab_colorRipple="@color/GrayLight"
        fab:fab_shadow="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />
</RelativeLayout>